--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "swiper": "^8.1.6"
+    "swiper": "^8.1.6",
+    "tw-elements": "^1.0.0-alpha12"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
